paper/results/run3/d-direct-L316-value_swap/bca_d1/10000/vague/test_output.txt
│
│ [ModelRequest.user_text_prompt('x')]) as stream:                             │
│          chunks = list(stream)                                               │
│ -        assert chunks == snapshot(                                          │
│ -            [                                                               │
│ -                PartStartEvent(index=0, part=TextPart(content='')),         │
│ -                FinalResultEvent(tool_name=None, tool_call_id=None),        │
│ -                PartDeltaEvent(index=0,                                     │
│ delta=TextPartDelta(content_delta='success ')),                              │
│ -                PartDeltaEvent(index=0,                                     │
│ delta=TextPartDelta(content_delta='(no ')),                                  │
│ -                PartDeltaEvent(index=0,                                     │
│ delta=TextPartDelta(content_delta='tool ')),                                 │
│ -                PartDeltaEvent(index=0,                                     │
│ delta=TextPartDelta(content_delta='calls)')),                                │
│ -                PartEndEvent(index=0, part=TextPart(content='success (no    │
│ tool calls)')),                                                              │
│ -            ]                                                               │
│ -        )                                                                   │
│ +        assert chunks == snapshot([])                                       │
│          assert stream.response == snapshot(                                 │
│              ModelResponse(                                                  │
│                  parts=[TextPart(content='success (no tool calls)')],        │
╰──────────────────────────────────────────────────────────────────────────────╯
These changes are not applied.
Use --inline-snapshot=fix to apply them, or use the interactive mode with 
--inline-snapshot=review


row(exception)  # type: ignore[union-attr]
    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/terminal.py", line 893, in pytest_sessionfinish
    result = yield
             ^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/pluggy/_callers.py", line 122, in _multicall
    teardown.throw(exception)  # type: ignore[union-attr]
    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/_pytest/warnings.py", line 141, in pytest_sessionfinish
    return (yield)
            ^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/pluggy/_callers.py", line 103, in _multicall
    res = hook_impl.function(*args)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/inline_snapshot/pytest_plugin.py", line 174, in pytest_sessionfinish
    self.session.show_report(Console(highlight=False))
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/inline_snapshot/_snapshot_session.py", line 434, in show_report
    used += used_externals_in(file, content, check_import=check_import)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/site-packages/inline_snapshot/_external/_find_external.py", line 33, in used_externals_in
    tree = ast.parse(source)
           ^^^^^^^^^^^^^^^^^
  File "/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 5337
    ModelRequest(
IndentationError: unexpected indent
/Users/akshankrithick/anaconda3/envs/vvenv/lib/python3.11/asyncio/base_events.py:693: ResourceWarning: unclosed event loop <_UnixSelectorEventLoop running=False closed=False debug=False>